--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -60,6 +60,10 @@
 "container-details-pin-not-provided" = "Authentication with PIN code is required for signing.";
 "container-details-signature-already-exists-alert-title" = "Signture exists";
 "container-details-signature-already-exists-alert-message" = "You have already signed the container, are you sure you want to add another signature ?";
+"container-details-persist-mobile-id-credentials-alert-title" = "Persist credentials";
+"container-details-persist-mobile-id-credentials-alert-message" = "Do you wish to persist entered ID code and phone number for feature uses ? ";
+
+
 
 
 // *** My eID ***
