mID cancel and timeout functionality implemented

--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -148,3 +148,6 @@
 // *** Mobile ID Challenge View ***
 
 "challenge-code-label" = "Code: %@";
+
+// *** Errors ***
+"mobile-id-timeout-message" = "Mobile ID request timeout";
