--- a/MoppApp/MoppApp/et.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/et.lproj/Localizable.strings
@@ -154,3 +154,6 @@
 // *** Mobile ID Challenge View ***
 
 "challenge-code-label" = "Kood: %@";
+
+// *** Errors ***
+"mobile-id-timeout-message" = "Mobile ID päring aegus";
