--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -58,18 +58,18 @@
 "container-details-rename" = "Rename";
 "container-details-enter-new-name" = "Enter new container name";
 "container-details-name" = "Name";
-"container-details-reader-not-found" = "You need to connect card reader to sign documents.";
+"container-details-reader-not-found" = "You need to connect a card reader to sign documents.";
 "container-details-card-not-found" = "ID card is missing. Please make sure ID card is inserted correctly.";
 "container-details-pin-not-provided" = "Authentication with PIN code is required for signing.";
 "container-details-signature-already-exists-alert-title" = "Signture exists";
 "container-details-signature-already-exists-alert-message" = "You have already signed the container, are you sure you want to add another signature ?";
 "container-details-file-already-exists" = "File with same name already exists. Do you want to overwrite?";
 "container-details-attention" = "Attention!";
-"container-details-persist-mobile-id-credentials-alert-title" = "Persist credentials";
-"container-details-persist-mobile-id-credentials-alert-message" = "Do you wish to persist entered ID code and phone number for feature uses ? ";
+"container-details-store-mobile-id-credentials-alert-title" = "Store credentials";
+"container-details-store-mobile-id-credentials-alert-message" = "Do you wish to store the entered ID code and phone number for future use ? ";
 
 // *** My eID ***
-"my-eid-id-card-info" = "ID-kaart on riigi sisene kohustuslik isikut tõendav dokument alates 15-aastast. Eesti kodanik saab ID-kaardiga reisida Euroopa Liidu ja Euroopa Majanduspiirkonna riikides.\n\nID-kaarti saab taotleda Politsei- ja Piirivalveameti teenindustes, Eesti Vabariigi välisteeninduses, posti võ e-posti teel. %@";
+"my-eid-id-card-info" = "ID-card is a compulsory identity document in Estonia. ID-card can be used to travel in Member States of the European Union and the European Economic Area.\n\nThe ID-card can be applied for in Service Offices of Police and Border Guard Administration, in foreign representations of the Republic of Estonia, by post or by e-mail. %@";
 "my-eid-warning-card-not-found" = "ID card is not found.\n\nPlease check if ID card is inserted correctly. New ID cards have chip on the back side of the card.";
 "my-eid-warning-reader-not-found" = "Card reader is not connected.\n\nPlease make sure your reader is turned on and %@ to select it.";
 "my-eid-tap-here" = "tap here";
@@ -112,9 +112,9 @@
 "pin-actions-rules-title" = "Rules";
 "pin-actions-rule-different-from-previous" = "New %@ must be different from previous one.";
 "pin-actions-rule-numbers-only" = "%@ must contain numbers only.";
-"pin-actions-rule-pin-length" = "Uus %@ peab olema %i-%i - numbriline.";
+"pin-actions-rule-pin-length" = "New %@ must be %i-%i digits long.";
 "pin-actions-rule-forbidden-pins" = "New %@ can't be %@, or contain combination of your birthdate.";
-"pin-actions-info" = "Here you can change your PIN codes and unblock them if needed. PIN operations need card reader to be connected to your phone.";
+"pin-actions-info" = "Here you can change your PIN codes and unblock them if needed. PIN operations require a card reader to be connected to your phone.";
 "pin-actions-general-error" = "Could not change %@";
 "pin-actions-same-as-current" = "New %@ must be different from current %@.";
 "pin-actions-invalid-format" = "This %@ is not allowed.";
