--- a/MoppApp/MoppApp/en.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/en.lproj/Localizable.strings
@@ -53,7 +53,7 @@
 "container-details-idcode-phone-alert-idcode-placholder" = "ID code";
 "container-details-idcode-phone-alert-phonenumber-placholder" = "Phone number";
 "container-details-phone-number-error-alert-title" = "Invalid phone number";
-"container-details-phone-number-error-alert-message" = "It seems that you have provided invalid phone number";
+"container-details-phone-number-error-alert-message" = "It seems that you have provided an invalid phone number";
 "container-details-rename-container" = "Rename container";
 "container-details-rename" = "Rename";
 "container-details-enter-new-name" = "Enter new container name";
