--- a/MoppLib/en.lproj/Localizable.strings
+++ b/MoppLib/en.lproj/Localizable.strings
@@ -4,6 +4,8 @@
 // *** Actions ***
 "action-ok" = "OK";
 "action-cancel" = "Cancel";
+"action-yes" = "Yes";
+"action-no" = "No";
 
 // *** PIN actions ***
 "pin-actions-pin1" = "PIN1";
@@ -21,6 +23,9 @@
 "Problem connecting %@" = "There was a problem connecting your reader: %@";
 "Error" = "Error";
 "Ok" = "Ok";
+
+"signature-already-exists-title" = "Signature exists";
+"signature-already-exists-message" = "You have already signed the container, are you sure you want to add another signature?";
 
 // *** Digidoc service status ***
 
