--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -1,3 +1,158 @@
 
-"test_string" = "DemoViewController RU";
+// *** General ***
+// TabBar
+"tab-containers" = "Документы";
+"tab-my-eid" = "Мой eID";
+"tab-sim-settings" = "Операции с PIN кодами";
+"tab-settings" = "Настройки";
+
+// *** Actions ***
+"action-ok" = "OK";
+"action-cancel" = "Отменить";
+"action-delete" = "Удаление";
+"action-edit" = "Редактировать";
+"action-yes" = "Да";
+"action-no" = "Нет";
+"action-create-new-document" = "Создать новый документ";
+"action-add-to-document" = "Добавить в существующий документ";
+
+// *** Signed containers ***
+// General
+"no-containers-cell-title" = "Контейнеры не найдены";
+// List
+"containers-list-search-placeholder" = "Искать";
+"containers-list-section-header-unsigned" = "Не подписан";
+"containers-list-section-header-signed" = "Подписан";
+// DataFile import
+"file-import-title" = "Импортировать файл";
+"file-import-create-container-button" = "Создать документ";
+"file-import-info" = "%@\n\nПожалуйста выберите неподписанный документ или создайте новый.";
+"file-import-import-failed-alert-title" = "Ошибка импорта";
+"file-import-import-failed-alert-message" = "Открытие файла %@ не удалось";
+// Details
+"container-details-title" = "Документ";
+"container-details-header-details" = "Формат: %@ | Размер: %ld кб";
+"container-details-datafile-section-header" = "Файл";
+"container-details-datafile-details" = "Размер: %ld кб";
+"container-details-signature-section-header" = "Подписи";
+"container-details-signature-prefix" = "Подпись %@";
+"container-details-signature-valid" = "действительна";
+"container-details-signature-invalid" = "недействительна";
+"container-details-enter-pin" = "Введите PIN2";
+"container-details-general-error" = "Oдписание не удалось.";
+"container-details-signing-success" = "Подпись добавлена.";
+"container-details-signature-added" = "Ваша подпись добавлена в документ.";
+"container-details-signature-already-exists" = "Этот документ уже содержит вашу подпись.";
+"container-details-signing-method-alert-title" = "Cпособ подписания";
+"container-details-signing-method-alert-message" = "Выберите способ подписания";
+"container-details-signing-method-mobile-id" = "Mobiil-ID";
+"container-details-signing-method-id-card" = "ID-карта";
+"container-details-idcode-phone-alert-title" = "Введите данные";
+"container-details-idcode-phone-alert-message" = "Введите личный код и номер мобильного телефона";
+"container-details-idcode-phone-alert-idcode-placholder" = "Личный код";
+"container-details-idcode-phone-alert-phonenumber-placholder" = "Номер мобильного телефона";
+"container-details-phone-number-error-alert-title" = "Неверный номер телефона";
+"container-details-phone-number-error-alert-message" = "Вы указали неверный номер телефона";
+"container-details-rename-container" = "Переименовать контейнер";
+"container-details-rename" = "Переименовать";
+"container-details-enter-new-name" = "Введите новое имя контейнера";
+"container-details-name" = "Имя";
+"container-details-reader-not-found" = "Для подписи документов вам необходимо подключить устройство для чтения ID-карт.";
+"container-details-card-not-found" = "Отсутствует ID-карточка. Убедитесь, что ID-карта вставлена правильно.";
+"container-details-pin-not-provided" = "Для подписи требуется аутентификация с помощью PIN-кода";
+"container-details-signature-already-exists-alert-title" = "Ваша подпись уже есть";
+"container-details-signature-already-exists-alert-message" = "Вы уже подписали контейнер, уверены, что хотите добавить еще одну подпись?";
+"container-details-file-already-exists" = "Файл с таким именем уже существует. Хотите его перезаписать?";
+"container-details-attention" = "Внимание!";
+"container-details-store-mobile-id-credentials-alert-title" = "Сохранить учетные данные";
+"container-details-store-mobile-id-credentials-alert-message" = "Хотите сохранить введенный ID-код и номер телефона для будущего использования?";
+"container-details-file-name-too-long" = "Слишком длинное имя документа.";
+"container-details-name-change-failed" = "Не удалось изменить имя документа.";
+
+
+// *** My eID ***
+"my-eid-id-card-info" = "ID-карта - это внутригосударственный документ, удостоверяющий личность начиная с 15-ти лет. Гражданин Эстонии с ID-картой может путешествовать по Европейскому Союзу и в странах Европейской экономической зоны.\n\nID-карту можете ходатайствовать в Департамента полиции и пограничной охраны, в зарубежных представительствах Эстонской республики, по почте или по электронной посте.. %@";
+"my-eid-warning-card-not-found" = "ID-карта не найдена. \n\nПожалуйста, проверьте правильность установки ID-карты. Новые идентификационные карточки имеют чип на обратной стороне карты.";
+"my-eid-warning-reader-not-found" = "Устройство чтения ID-карт не подключено.\n\nПожалуйста, убедитесь, что ваш считыватель включен и %@, чтобы выбрать его.";
+"my-eid-tap-here" = "нажмите здесь";
+"my-eid-find-more-info" = "Читать дальше.";
+"my-eid-given-names" = "Имя:";
+"my-eid-surname" = "Фамилия:";
+"my-eid-personal-code" = "Личный номер:";
+"my-eid-birth" = "День рождения:";
+"my-eid-citizenship" = "Гражданство:";
+"my-eid-email" = "Эл. почта:";
+"my-eid-card-in-reader" = "В считывателе карта:";
+"my-eid-valid-until" = "Действителен до:";
+"my-eid-use-count" = "Сертификат использован:";
+"my-eid-validity" = "Период действия:";
+"my-eid-valid" = "Действителен";
+"my-eid-not-valid" = "Недействителен";
+"my-eid-valid-until" = "Действителен до:";
+"my-eid-personal-data" = "Личные данные";
+"my-eid-times-used" = "%i раза";
+"my-eid-used-once" = "1 раз";
+"my-eid-eid" = "eID";
+"my-eid-signature-certificate" = "Сертификат подписи";
+"my-eid-my-eid" = "Мой eID";
 "my-eid-id-card-info-link" = "https://www.politsei.ee/ru/teenused/isikut-toendavad-dokumendid/id-kaart/taiskasvanule/";
+"my-eid-pin-blocked" = "%@ заблокирован. Вы можете разблокировать %@ в %@.";
+"my-eid-pin-actions-view" = "Просмотреть PIN действия";
+
+
+// *** PIN actions ***
+"pin-actions-pin1" = "PIN1";
+"pin-actions-pin2" = "PIN2";
+"pin-actions-puk" = "PUK";
+"pin-actions-change-pin" = "Изменить %@";
+"pin-actions-unblock-pin" = "Разблокировать  %@";
+"pin-actions-changing-pin" = "Изменение %@";
+"pin-actions-title-unblocking-pin" = "Разблокировка %@";
+"pin-actions-current-pin" = "Текущий %@ код";
+"pin-actions-new-pin" = "Новый %@ код";
+"pin-actions-repeat-pin" = "Повторять Новый %@ код";
+"pin-actions-rules-title" = "Правила";
+"pin-actions-rule-different-from-previous" = "Старый и новый %@ должны быть разные.";
+"pin-actions-rule-numbers-only" = "%@ должен содержать только цифры.";
+"pin-actions-rule-pin-length" = "Новый %@ должен состоять из %i-%i цифр.";
+"pin-actions-rule-forbidden-pins" = "Новый %@ неможет быть %@, или содержать комбинацию из дня рождения.";
+"pin-actions-info" = "Здесь вы можете изменить свои PIN коды и разблокировать их при необходимости. Для операций с PIN-кодами требуется, чтобы устройство чтения ID-карт было подключено к вашему телефону.";
+"pin-actions-general-error" = "Не удалось изменить %@";
+"pin-actions-same-as-current" = "Новый %@ должен отличаться от действующего %@.";
+"pin-actions-invalid-format" = "Такой %@ не допускается.";
+"pin-actions-wrong-pin-retry" = "Введенный %@ был неправильным. У вас осталось %i попыток.";
+"pin-actions-wrong-pin-blocked" = "Введенный %@ был неправильным. %@ заблокирован.";
+"pin-actions-error-title" = "Ошибка";
+"pin-actions-success-title" = "PIN действие было успешным";
+"pin-actions-success-pin-changed" = "%@ был изменен.";
+"pin-actions-success-pin-unblocked" = "%@ был изменен и разблокирован.";
+"pin-actions-verification-title" = "Изменение  %@:";
+"pin-actions-verification-option" = "Использование текущего %@ кода";
+"pin-actions-unblocking-pin" = "Разблокирование  %@:";
+"pin-actions-repeated-pin-doesnt-match" = "Новый %@ и повторный %@ различны.";
+"pin-actions-pin-blocked" = "%@ заблокирован.";
+
+
+// *** Settings ***
+"settings-new-container-format" = "Формат файла по умолчанию";
+"settings-application-version" = "Версия";
+"settings-about" = "Около";
+"settings-id-code-title"= "Личный номер";
+"settings-phone-number-title" = "Номер мобильного телефона";
+"settings-id-code-alert-message" = "Введите личный номер";
+"settings-phone-number-alert-message" = "Введите номер мобильного телефона";
+"mobile-id-header-Mobile" = "Mobiil ID";
+
+// *** About ***
+"about-development" = "Программное обеспечение заказано RIA, разработано Mobi Lab";
+"about-dependencies" = "Дополнительные зависимости";
+
+
+// *** Mobile ID Challenge View ***
+
+"challenge-code-label" = "Код: %@";
+
+// *** Errors ***
+"mobile-id-timeout-message" = "Тайм-аут запроса Mobiil ID";
+"error-alert-title-general" = "Отказ";
+
