--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -69,6 +69,8 @@
 "container-details-file-name-too-long" = "Слишком длинное имя документа.";
 "container-details-name-change-failed" = "Не удалось изменить имя документа.";
 
+"container-details-internet-connection-error-title" = "No internet connection";
+"container-details-internet-connection-error-message" = "Internet connection must be available for signing.";
 
 // *** My eID ***
 "my-eid-id-card-info" = "ID-карта - это внутригосударственный документ, удостоверяющий личность начиная с 15-ти лет. Гражданин Эстонии с ID-картой может путешествовать по Европейскому Союзу и в странах Европейской экономической зоны.\n\nID-карту можете ходатайствовать в Департамента полиции и пограничной охраны, в зарубежных представительствах Эстонской республики, по почте или по электронной посте.. %@";
