--- a/MoppApp/MoppApp/ru.lproj/Localizable.strings
+++ b/MoppApp/MoppApp/ru.lproj/Localizable.strings
@@ -82,8 +82,9 @@
 // *** My eID ***
 "my-eid-id-card-info" = "ID-карта - это внутригосударственный документ, удостоверяющий личность начиная с 15-ти лет. Гражданин Эстонии с ID-картой может путешествовать по Европейскому Союзу и в странах Европейской экономической зоны.\n\nID-карту можете ходатайствовать в Департамента полиции и пограничной охраны, в зарубежных представительствах Эстонской республики, по почте или по электронной посте.. %@";
 "my-eid-warning-card-not-found" = "ID-карта не найдена. \n\nПожалуйста, проверьте правильность установки ID-карты. Новые идентификационные карточки имеют чип на обратной стороне карты.";
-"my-eid-warning-reader-not-found" = "Устройство чтения ID-карт не подключено.\n\nПожалуйста, убедитесь, что ваш считыватель включен и %@, чтобы выбрать его.";
+"my-eid-warning-reader-not-found" = "Устройство чтения ID-карт не подключено.\n\nПожалуйста, убедитесь, что ваш считыватель включен и %@, чтобы выбрать его.\n\n %@";
 "my-eid-tap-here" = "нажмите здесь";
+"my-eid-supported-reader" = "Supported reader";
 "my-eid-find-more-info" = "Читать дальше.";
 "my-eid-given-names" = "Имя:";
 "my-eid-surname" = "Фамилия:";
