--- a/MoppLib/et.lproj/Localizable.strings
+++ b/MoppLib/et.lproj/Localizable.strings
@@ -17,7 +17,7 @@
 
 "Select reader" = "Vali kaardilugeja";
 "Cancel" = "Katkesta";
-"Connect reader message" = "Kaardilugeja ei ole ühendatud. Palun kontrolli, et lugeja oleks aktiivne ja vali lugeja.";
+"Connect reader message" = "Vali bluetooth kaardilugeja. Palun kontrolli, et lugeja oleks aktiivne ja bluetooth oleks sisse lülitatud.";
 "Problem connecting %@" = "Seadme ühendamisel tekkis probleem: %@";
 "Error" = "Viga";
 "Ok" = "Ok";
